--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powpeg-redeemscript-parser",
-  "version": "0.2.0",
+  "version": "0.2.0-beta",
   "description": "",
   "main": "index.js",
   "scripts": {
