--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powpeg-redeemscript-parser",
-  "version": "0.3.0-beta",
+  "version": "0.4.0-beta",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,9 +13,9 @@
     "bitcoinjs-lib": "^5.2.0"
   },
   "devDependencies": {
-    "@rsksmart/rsk-precompiled-abis": "^4.0.2-IRIS",
+    "@rsksmart/rsk-precompiled-abis": "^5.0.0-HOP",
     "chai": "^4.3.4",
-    "mocha": "^7.2.0",
+    "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "web3": "^1.5.2"
   }
