--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 10000",
     "test-coverage": "nyc --check-coverage  --branches 100 --statements 100 --lines 100 mocha test/*.js"
   },
   "author": "",
