--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --timeout 10000",
-    "test-coverage": "nyc --check-coverage  --branches 100 --statements 100 --lines 100 mocha test/*.js"
+    "test-coverage": "nyc --check-coverage  --branches 100 --statements 100 --lines 100 mocha test/*.js --timeout 10000"
   },
   "author": "",
   "license": "ISC",
