--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bitcoinjs-lib": "^5.2.0"
   },
   "devDependencies": {
-    "@rsksmart/rsk-precompiled-abis": "^5.0.0-HOP",
+    "@rsksmart/rsk-precompiled-abis": "^6.0.0-ARROWHEAD",
     "chai": "^4.3.4",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
